<resources>

    <string name="app_name">Tasks</string>
    <string name="new_task_button">Create Task</string>
    <string name="state_Available">Available</string>
    <string name="state_Assigned">Assigned</string>
    <string name="state_Accepted">Accepted</string>
    <string name="state_Finished">Finished</string>
    <string name="input_StringTitle">Title of Task</string>
    <string name="input_StringDescription">Description of Task</string>
    <string name="create_Header">Fill Out and Submit this form to make a New Task! </string>
    <string name="detail_State"> State of Task </string>
    <string name="main_Login">Login</string>
    <string name="main_Logout">Logout</string>
    <string name="main_profile">User Profile</string>
    <string name="profile_UserName">Username</string>
    <string name="provile_Email">Email</string>
    <string name="profile_bio">About You!</string>
    <string name="profile_save">Save</string>
    <string name="user_MyTasks">My Claimed Tasks</string>


</resources>
